Spring Boot Web/resources/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spring-boot-web
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  tls:
  - hosts:
    - localhost
    secretName: localhost-cert
  ingressClassName: nginx
  rules:
  - host: localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: spring-boot-web
            port:
              number: 80
